--- a/website.html
+++ b/website.html
@@ -24,61 +24,89 @@
       </nav>
     </header>
     <div id="par-1">
-      <h1>Furry Friend is waiting for you!</h1>
-      <p>
-        The Corgi Company guarantees well-socialized and healthy puppies. We
-        have many years of breeding experience. We will choose a suitable friend
-        for you.
-      </p>
-      <button>Learn more</button>
-      <button>Watch video</button>
+      <div>
+        <h1>
+          Furry Friend<br />
+          is waiting for you!
+        </h1>
+        <p>
+          The Corgi Company guarantees well-socialized and<br />
+          healthy puppies. We have many years of breeding<br />
+          experience. We will choose a suitable friend for you.
+        </p>
+        <button id="b1">Learn more</button>
+        <button id="b2">Watch video</button>
+      </div>
+      <div><img src="corgi-4.jpg" alt="Corgi-picture" width="700" /></div>
+    </div>
+    <div id="par-2">
+      <div>
+        <img id="pic-2" src="corgi-3.jpg" alt="Corgi-picture1" width="700" />
+      </div>
+      <div>
+        <h1>Our story</h1>
+        <p>
+          We have many years of experience. We know the breed. Dogs are our
+          passion. We love what we do. Let's get to know each other.
+        </p>
+        <button id="b3">Learn more</button>
+      </div>
     </div>
     <div>
-      <h1>Our story</h1>
-      <p>
-        We have many years of experience. We know the breed. Dogs are our
-        passion. We love what we do. Let's get to know each other.
-      </p>
-      <button>Learn more</button>
-    </div>
-    <div>
-      <h1>Meet our puppies</h1>
-      <p>
-        Here are the stars of the new litter of our kennel. Get to know them
-        better and check which one will win your heart.
-      </p>
+      <div id="page-3-top">
+        <h1>Meet our puppies</h1>
+        <p>
+          Here are the stars of the new litter of our kennel.<br />Get to know
+          them better and check which one will win your heart.
+        </p>
+      </div>
       <div class="cards">
         <div>
+          <img src="pup-1.jpg" alt="pup-1" />
           <p>Lolo</p>
           <p>King of the moon</p>
         </div>
         <div>
+          <img src="pup-2.jpg" alt="pup-2" />
           <p>Layla</p>
           <p>Queen of the night</p>
         </div>
         <div>
+          <img src="pup-3.jpg" alt="pup-3" />
           <p>Leoy</p>
           <p>King of the garden</p>
         </div>
       </div>
-      <div>
-        <h1>Keep update</h1>
-        <p>Sign up our newsletter to receive update about puppies</p>
-        <form>
-          <input type="text" placeholder="Your name" />
-          <input type="email" placeholder="Your email" />
-          <input type="submit" value="Subscribe" />
-        </form>
+      <div id="par-3">
+        <div id="proper">
+          <h1>Keep update</h1>
+          <p>Sign up our newsletter to receive update about puppies</p>
+          <p id="message"></p>
+          <form id="form-id">
+            <input name="name" id="bb-1" type="text" placeholder="Your name" />
+            <input name="email" id="bb-2" type="email" placeholder="Your email" />
+            <input id="subscribe-button" type="submit" value="Subscribe" />
+          </form>
+        </div>
+        <div>
+          <img id="pic-3" src="corgi-1.jpg" alt="corgi-photo" width="600" />
+        </div>
       </div>
     </div>
     <footer>
       <p>The Corgi Company</p>
-      <p>Interested in our daily life? You can meet our dogs here</p>
-      <a href="www.facebook.com">Our Facebook</a>
-      <a href="#">About us</a>
-      <a href="#">Our story</a>
-      <a href="#">Our puppies</a>
-      <a href="#">Contact us</a>
+      <p>
+        Interested in our daily life?<br />
+        You can meet our dogs here
+      </p>
+      <nav class="menu-bottom">
+        <a href="www.facebook.com">Our Facebook</a>
+        <a href="#">About us</a>
+        <a href="#">Our story</a>
+        <a href="#">Our puppies</a>
+        <a href="#">Contact us</a>
+      </nav>
     </footer>
+    <script src="index.js"></script>
   </body>
 </html>
